[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crackmnist"
authors = [
    {name = "David Melching", email = "David.Melching@dlr.de"},
    {name = "Ferdinand Dömling"},
    {name = "Florian Paysan"},
    {name = "Erik Schultheis"},
    {name = "Eric Dietrich"},
    {name = "Eric Breitbarth", email = "Eric.Breitbarth@dlr.de"},
]
description = "CrackMNIST - Annotated Digital Image Correlation Displacement Fields from Fatigue Crack Growth Experiments"
readme = "README.md"
requires-python = "~=3.12"
keywords = ["MNIST", "Crack Tip Detection", "Fatigue", "Digital Image Correlation"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch~=2.9.1",
    "torchvision~=0.24.1",
    "numpy~=2.3.5",
    "matplotlib~=3.10.17",
    "h5py~=3.15.1",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "crackmnist.info.__version__"}

[project.urls]
Repository = "https://github.com/dlr-wf/crackmnist/"
Issues = "https://github.com/dlr-wf/crackmnist/issues"
